add loggin system

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>cn.neo.icomplain</groupId>
 	<artifactId>icomplain-desktop</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>icomplain-desktop</name>
@@ -62,7 +62,7 @@
 
 
 	<build>
-		<finalName>icomplain-desktop</finalName>
+		<!-- <finalName>icomplain-desktop</finalName> -->
 		<sourceDirectory>src/main/java</sourceDirectory>
 
 
