1.resize main window 2.fix a bug of inserting blank data to database 3.never drop data table before adding record.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>cn.neo.icomplain</groupId>
 	<artifactId>icomplain-desktop</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1-RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>icomplain-desktop</name>
